Fixes styles for PDF to remove scrollbars

--- a/css/default.scss
+++ b/css/default.scss
@@ -235,6 +235,9 @@ article {
     small {
       pre {
         white-space: pre-wrap;
+        code {
+          overflow-x: hidden;
+        }
       }
     }
   }
